@@ -1416,8 +1416,11 @@ void upnp::on_upnp_unmap_response(error_code const& e
 	}
 
 	error_code_parse_state s;
-	xml_parse((char*)p.get_body().begin, (char*)p.get_body().end
-		, boost::bind(&find_error_code, _1, _2, boost::ref(s)));
+	if (p.header_finished())
+	{
+		xml_parse((char*)p.get_body().begin, (char*)p.get_body().end
+			, boost::bind(&find_error_code, _1, _2, boost::ref(s)));
+	}
 
 	l.unlock();
 	m_callback(mapping, address(), 0, p.status_code() != 200
